+ Bugs fixes